--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+      background-image: url('sza.jpg');
+    }
 <body>
-    <h1>"LIVE LAUGH SZA"</h1>
+    <center> 
+    <u><h1>"LIVE LAUGH SZA"</h1></u>
+    <p>SOLANA</p> 
+    <p><a href="https://youtu.be/dp45V_M4Akw">DREW BARRYMORE</a></p>
+    <p><a href="https://youtu.be/hdFDrjfW548">SHIRT</a></p>
 </body>
 </html>
