--- a/index1.html
+++ b/index1.html
@@ -11,10 +11,6 @@
       background-image: url('sza.jpg');
     }
 <body>
-    <center> 
-    <u><h1>"LIVE LAUGH SZA"</h1></u>
-    <p>SOLANA</p> 
-    <p><a href="https://youtu.be/dp45V_M4Akw">DREW BARRYMORE</a></p>
-    <p><a href="https://youtu.be/hdFDrjfW548">SHIRT</a></p>
+    <h1>"LIVE LAUGH SZA"</h1>
 </body>
 </html>
