--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,10 @@
     body {
       background-image: url('sza.jpg');
     }
+    </style>
 <body>
-    <h1>"LIVE LAUGH SZA"</h1>
+   <center>
+     <h1>"LIVE LAUGH SZA"</h1>
+    <p> hello!!! </p> </center>
 </body>
 </html>
